<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/image_margin"
    tools:context="com.pg.customersupport.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/btn_top_margin"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="@dimen/avatar_height"
                    android:layout_height="@dimen/avatar_height"
                    android:contentDescription="@string/ticket_user_avatar"
                    android:scaleType="fitXY" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:orientation="vertical"
                android:padding="@dimen/card_item_user_section">

                <TextView
                    android:id="@+id/user_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_small"
            android:layout_marginBottom="@dimen/btn_top_margin"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/btn_top_margin"
            android:background="@color/shades"
            android:orientation="vertical">

            <TextView
                android:id="@+id/basic_info_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_item_user"
                android:text="@string/basic_information"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/textNormal"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_small"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/card_item_user"
                android:paddingTop="@dimen/card_item_user"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/image_birthday"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:contentDescription="@string/birthday_icon"
                    android:tint="@color/textLight"
                    app:srcCompat="@drawable/ic_pages_black_24dp" />

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="85"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/textDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/card_item_user"
                android:paddingTop="@dimen/card_item_user"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/image_gender"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:contentDescription="@string/gender_icon"
                    android:tint="@color/textLight"
                    app:srcCompat="@drawable/ic_account_box_black_24dp" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="85"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/textDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/card_item_user"
                android:paddingTop="@dimen/card_item_user"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/image_address"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:contentDescription="@string/location_icon"
                    android:tint="@color/textLight"
                    app:srcCompat="@drawable/ic_place_black_24dp" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="85"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/textDark" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_small"
            android:layout_marginBottom="@dimen/btn_top_margin"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/btn_top_margin"
            android:background="@color/shades"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_info_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_item_user"
                android:text="@string/contact_information"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/textNormal"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_small"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/card_item_user"
                android:paddingTop="@dimen/card_item_user"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/image_phone"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:contentDescription="@string/phone_icon"
                    android:tint="@color/textLight"
                    app:srcCompat="@drawable/ic_phone_iphone_black_24dp" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/textDark" />

                <ImageView
                    android:id="@+id/image_phone_verified"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:contentDescription="@string/verified_icon"
                    android:tint="@color/low"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_verified_user_black_24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/card_item_user"
                android:paddingTop="@dimen/card_item_user"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/image_email"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:contentDescription="@string/email_icon"
                    android:tint="@color/textLight"
                    app:srcCompat="@drawable/ic_email_black_24dp" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/textDark" />

                <ImageView
                    android:id="@+id/image_email_verified"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:contentDescription="@string/verified_icon"
                    android:tint="@color/low"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_verified_user_black_24dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
